src/app/components/options-bar/options-bar.component.scss
@use '@angular/material' as mat;

// Copyright 2023 Carnegie Mellon University. All Rights Reserved.
// Released under a MIT (SEI)-style license. See LICENSE.md in the project root for license information.

:host {
  @include mat.button-density(-2);
}

.connected-users {
  font-size: x-small;
  font-family: open_sansregular;
  margin-right: 5px;
}

.network-search-container {
  padding: 0.25em 1em;
}

.network-search-input {
  width: 100%;
  padding: 0.4em 0.5em;
  border: 1px solid currentColor;
  border-radius: 0.25em;
  background: transparent;
  color: inherit;
  outline: none;
  font: inherit;

  &::placeholder {
    color: currentColor;
  }
}

